Changes: modified:   index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="msvalidate.01" content="FEC51EAE165D3E78B56C4FF3CF6DA5C5" />
+    <meta
+      name="google-site-verification"
+      content="caPpLFc0lP5xrHs8vVRcgJFJPb_NQi-J7mzglzNsc1Q"
+    />
+    <meta
+      name="description"
+      content="Dimitri Makarov's professional full-stack web developer resume showcasing expertise in HTML, CSS, JavaScript, and backend technologies. Skilled in creating dynamic, user-focused digital experiences."
+    />
+    <meta
+      name="keywords"
+      content="Dimitri Makarov, resume, front-end, back-end, full-stack, web developer, HTML, CSS, JavaScript, backend development, frontend development, fullstack development, digital experiences, portfolio"
+    />
     <link rel="icon" type="image/svg+xml" href="/DM.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dimitri Makarov CV</title>
