--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
     <link rel="icon" type="image/svg+xml" href="/DM.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Dimitri Makarov CV</title>
+    <title>Dimitri Makarov</title>
   </head>
   <body>
     <div id="root"></div>
